tests/baselines/reference/exportsAndImports3.errors.txt
t1.ts(13,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
t1.ts(16,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== t1.ts (2 errors) ====
    export var v = 1;
    export function f() { }
    export class C {
    }
    export interface I {
    }
    export enum E {
        A, B, C
    }
    export const enum D {
        A, B, C
    }
    export module M {
                  ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var x;
    }
    export module N {
                  ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface I {
        }
    }
    export type T = number;
    export import a = M.x;
    
    export { v as v1, f as f1, C as C1, I as I1, E as E1, D as D1, M as M1, N as N1, T as T1, a as a1 };
    
==== t2.ts (0 errors) ====
    export { v1 as v, f1 as f, C1 as C, I1 as I, E1 as E, D1 as D, M1 as M, N1 as N, T1 as T, a1 as a } from "./t1";
    
==== t3.ts (0 errors) ====
    import { v1 as v, f1 as f, C1 as C, I1 as I, E1 as E, D1 as D, M1 as M, N1 as N, T1 as T, a1 as a } from "./t1";
    export { v, f, C, I, E, D, M, N, T, a };
    